[graal] initial graal upcall and test framework